@@ -1,77 +1,0 @@
-//////////////////////////////////////////////////////////////////////////
-//
-//  Copyright (c) 2008, Image Engine Design Inc. All rights reserved.
-//
-//  Redistribution and use in source and binary forms, with or without
-//  modification, are permitted provided that the following conditions are
-//  met:
-//
-//     * Redistributions of source code must retain the above copyright
-//       notice, this list of conditions and the following disclaimer.
-//
-//     * Redistributions in binary form must reproduce the above copyright
-//       notice, this list of conditions and the following disclaimer in the
-//       documentation and/or other materials provided with the distribution.
-//
-//     * Neither the name of Image Engine Design nor the names of any
-//       other contributors to this software may be used to endorse or
-//       promote products derived from this software without specific prior
-//       written permission.
-//
-//  THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS
-//  IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO,
-//  THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR
-//  PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT OWNER OR
-//  CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL,
-//  EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO,
-//  PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR
-//  PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF
-//  LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING
-//  NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
-//  SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
-//
-//////////////////////////////////////////////////////////////////////////
-
-#ifndef IE_COREMAYA_MDATAHANDLEACCESSORTEST_H
-#define IE_COREMAYA_MDATAHANDLEACCESSORTEST_H
-
-#include <iostream>
-
-#include "boost/test/unit_test.hpp"
-
-#include "IECoreMaya/MDataHandleAccessor.h"
-
-namespace IECoreMaya
-{
-
-/// Ensure that all specialisations instantiate correctly
-template class MDataHandleAccessor< MObject >;
-template class MDataHandleAccessor< bool >;
-template class MDataHandleAccessor< char >;
-template class MDataHandleAccessor< unsigned char >;
-template class MDataHandleAccessor< short >;
-template class MDataHandleAccessor< int >;
-template class MDataHandleAccessor< void* >;
-template class MDataHandleAccessor< float >;
-template class MDataHandleAccessor< double >;
-template class MDataHandleAccessor< MDistance >;
-template class MDataHandleAccessor< MAngle >;
-template class MDataHandleAccessor< MTime >;
-template class MDataHandleAccessor< short2 >;
-template class MDataHandleAccessor< int2 >;
-template class MDataHandleAccessor< float2 >;
-template class MDataHandleAccessor< double2 >;
-template class MDataHandleAccessor< short3 >;
-template class MDataHandleAccessor< int3 >;
-template class MDataHandleAccessor< float3 >;
-template class MDataHandleAccessor< double3 >;
-template class MDataHandleAccessor< MVector >;
-template class MDataHandleAccessor< MFloatVector >;
-template class MDataHandleAccessor< MMatrix >;
-template class MDataHandleAccessor< MFloatMatrix >;
-template class MDataHandleAccessor< MString >;
-template class MDataHandleAccessor< MPxData * >;
-
-} // namespace IECoreMaya
-
-#endif // IE_COREMAYA_MDATAHANDLEACCESSORTEST_H
